--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@fullcalendar/bootstrap": "^5.11.5",
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.11.5",
@@ -18,7 +21,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "cdbreact": "^1.5.19",
     "choices.js": "^10.1.0",
     "fslightbox-react": "^1.7.6",
     "fullcalendar-interaction": "^5.3.3",
@@ -34,6 +39,7 @@
     "react-accessible-treeview": "^2.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
+    "react-bs-datatable": "^3.15.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^5.2.0",
     "react-cropper": "^2.1.8",
@@ -60,7 +66,7 @@
     "smooth-scrollbar": "^8.8.4",
     "sortablejs": "^1.14.0",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^11.7.1",
+    "sweetalert2": "^11.11.0",
     "swiper": "^8.4.7",
     "three": "^0.139.2",
     "waypoints": "^4.0.1",
