--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
+    "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.29.3",
     "nouislider-react": "^3.4.1",
     "prismjs": "^1.24.1",
