add a pdf generator for cleint rapport

--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.3",
     "cdbreact": "^1.5.19",
     "choices.js": "^10.1.0",
+    "file-saver": "^2.0.5",
     "fslightbox-react": "^1.7.6",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -44,6 +45,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^5.2.0",
     "react-cropper": "^2.1.8",
+    "react-data-table-component": "^7.6.2",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
