--- a/crm-frontend/package.json
+++ b/crm-frontend/package.json
@@ -35,12 +35,15 @@
     "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.29.3",
     "nouislider-react": "^3.4.1",
+    "print-js": "^1.6.0",
     "prismjs": "^1.24.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bs-datatable": "^3.15.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^5.2.0",
